<resources>
    <string name="app_name">ЛЧБ</string>
    <string name="team_activity">Профил команды</string>
    <string name="match_activity">Статистика матча</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Выйти</string>

    <string name="high_div">Высший дивизион</string>>
    <string name="first_div">Первый дивизион</string>>
    <string name="secondA_div">Второй дивизион A</string>>
    <string name="secondB_div">Второй дивизион B</string>>
    <string name="thirdA_div">Третий дивизион A</string>>
    <string name="thirdB_div">Третий дивизион B</string>
    <string name="descriptionTAble">И - игры, З - забито, П - пропущено, О - очки</string>
    <string name="state_player">Статистика игркоов</string>
    <string name="all_matches">Все матчи</string>>

    <string name="name_organization">Лига Чемпионов Бизнеса</string>
    <string name="name_division">Футбол</string>

    <string name="btn_sent_result">Отправить</string>>

    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_name">Имя</string>
    <string name="btn_login">Войти</string>
    <string name="btn_register">Зарегистрироваться</string>
    <string name="btn_link_to_register">Регистрация</string>
    <string name="btn_link_to_login">Уже есть аккаунт</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="hint_teamName">Команда</string>
    <string name="sentProtocol">Добавить данные</string>
    <string name="clearProtocol">Очистить протокол</string>
    <string name="action_refresh">Обновить</string>

    <string-array name="divisions_list">
        <item>Высший дивизион</item>
        <item>Первый дивизион</item>
        <item>Второй дивизион А</item>
        <item>Второй дивизион В</item>
        <item>Третий дивизион А</item>
        <item>Третий дивизион В</item>
    </string-array>>
    <string-array name="leagues_list">
        <item>Восточная Лига</item>
        <item>Западная Лига</item>
        <item>Северная лига</item>
        <item>Южная Лига</item>
    </string-array>>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

</resources>
