<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:title="@string/high_div" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/first_div" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/secondA_div" />
        <item
            android:id="@+id/nav_manage"
            android:title="@string/secondB_div" />
        <item
            android:id="@+id/nav_share"
            android:title="@string/thirdA_div" />
        <item
            android:id="@+id/nav_send"
            android:title="@string/thirdB_div" />
    </group>

    <item android:title="Communicate">
        <menu>

        </menu>
    </item>

</menu>
